# regiboard

./: .config.example  .gitignore  README.md  clk_counter.html  mxc_fb_rotate.patch  rb_build.sh  rb_core.sh  rb_firmware.sh  rb_helpers.sh  rb_initramfs.sh  rb_kernel.sh  rb_mmc.sh  rb_packet.sh  rb_patch_rootfs_image.sh  rb_rootfs.sh  rb_toolchain.sh  rb_uboot.sh  rb_upload_os.sh  readme_EN.txt  readme_en.txt  register_view.html  todo.txt
board/: imx51.bbg  imx51.v1  imx53.sk  imx53.v0
conf/: SK.imx53.kernel.2.6.35.3  busybox  busybox-1.20.x.config  busybox.unknown  cortex_a8.ct-ng  cortex_a8.ct-ng.v1  cortex_a8.ct-ng.v2  cortex_a8.ct-ng.v3  regigraf.buildroot  regigraf.buildroot.v1  regigraf.imx51.kernel.2.6.35.3  regigraf.imx53.kernel.2.6.35.3  regigraf.imx53.kernel.2.6.35.3.mini
conf/busybox/: initramfs.config  initramfs.config.tftp.debug  initramfs.config.v0  initramfs.config.v1
conf/firmware/: regigraf.1772.53.10.H_rbi.conf  regigraf.1772.53.64.H_rbi.conf  regigraf.1772.53.76.V_rbi.conf  regigraf.1772.53.UNIVERSAL_rbi.conf  regigraf_rbi.conf
conf/mkimage/: imximage_nand.cfg
conf/openocd/: imx53.cfg
conf/packets/: ++DFB.conf  boost.conf  busybox.conf  cgdb.conf  dfb_test.conf  e2fsprogs.conf  fb_recorder.conf  fcb_gen.conf  gdb.conf  imx-fcb-gen.conf  imx-usb-loader.conf  kobs-ng.conf  libmodbus.conf  linux-kernel-modules.conf  linux-kernel.conf  modpoll.conf  mtd.conf  nodejs.conf  openocd.conf  regigraf.conf  regiloader.conf  regipswd.conf  regirfb.conf  regisetup.conf  regisplash.conf  regitest.conf  regiweb.conf  rtc_test.conf  splash_scr.conf  stat_test.conf  ttyusb_test.conf  udev_handler.conf  util-linux.conf  webapp.conf
conf/uboot/: imximage_nand.cfg
src/: mx53_regigraf.c
src/etc/: directfbrc  interfaces  ipkg.conf  sshd_config  uboot_nand.conf
src/patches/: ++DFB-1.4.2.cortex_a8.r0.patch  ++DFB-1.4.2.cortex_a8.r2015034154651.patch  buildroot.regigraf.cortex_a8.lxdialog.patch  buildroot.regigraf.cortex_a8.r0.patch  buildroot.regigraf.cortex_a8.r050135216.patch  buildroot.regigraf.cortex_a8.r327104718.patch  busybox-1.20.1.patch  crosstool-ng-1.16.0.r2017096122033.patch  glibc-2.9-makefile_fix.patch  imx-usb-loader.x86_64.r049102026.patch  linux-2.6.35.3.SK.lxdialog.patch  linux-2.6.35.3.SK.r0.patch  linux-2.6.35.3.SK.r1.patch  linux-2.6.35.3.SK.r2.patch  linux-2.6.35.3.SK.r2013233160518.patch  linux-2.6.35.3.SK.r2014268141834.patch  linux-2.6.35.3.SK.r2014275151011.patch  linux-2.6.35.3.SK.r2014338153335.patch  linux-2.6.35.3.SK.r2014346125001.patch  linux-2.6.35.3.SK.r2015026153439.patch  linux-2.6.35.3.SK.r2015057111217.patch  linux-2.6.35.3.SK.r2015076165953.patch  linux-2.6.35.3.SK.r2015254161031.patch  linux-2.6.35.3.SK.r2015258125143.patch  linux-2.6.35.3.SK.r210151259.patch  linux-2.6.35.3.SK.r216105942.patch  linux-2.6.35.3.SK.r226095822.patch  linux-2.6.35.3.SK.r233160518.patch  linux-2.6.35.3.SK.r247085817.patch  openocd-0.7.0.x86_64.r049143356.patch  u-boot-2009.08.01-regigraf.patch  u-boot-2009.08.01-regigraf.r2013233131526.patch  u-boot-2009.08.01-regigraf.r2013247090042.patch  u-boot-2009.08.01-regigraf.r2014267163450.patch  u-boot-2009.08.01-regigraf.r2014346134038.patch  u-boot-2009.08.01-regigraf.r2015043141133.patch  u-boot-2009.08.01-regigraf.r2015348100645.patch  u-boot-2009.08.01-regigraf.r225133653.patch  u-boot-2009.08.01-regigraf.r226095745.patch
src/shell/: S00gpio_init  S02terminal_init  S11ubi  S39gui  S40network  S41eth0_restart  S41sysinfo  S51sysinfo  S60gui  S91fbrec  click  colors.sh  init  led  rb_functions.sh  rb_fuses_imx53.sh  rb_openocd_imx53.sh  rb_setup_linux.sh  rb_ttyusb_tester.sh  rb_update_kernel  sysinfo.sh  udhcpc_renew
src/tty_font/: eurorus.f16.psf
src/utils/: CMakeList.base.txt  regiloader.patch
src/utils/dfb_test/: CMakeLists.txt  dfb_test.cpp
src/utils/fb_recorder/: .gitignore  CMakeLists.txt  fb_viewer.html  framebuf.cpp  framebuf.hpp  imx53_build.sh  index.html  main.cpp
src/utils/fcb_gen/: CMakeLists.txt
src/utils/imx-fcb-gen/: CMakeLists.txt  fcb_gen.cpp
src/utils/modpoll/: CMakeLists.txt
src/utils/openocd-0.7.0/: Makefile  config.h  config.status  libtool
src/utils/regiloader/: CMakeLists.txt  asio_helper.cpp  asio_helper.hpp  debug_backtrace.cpp  debug_backtrace.hpp  regiloader.cpp  regiloader.hpp  sdp.cpp  sdp.hpp  tftp.cpp  tftp.hpp  ymodem.cpp  ymodem.hpp
src/utils/regipswd/: CMakeLists.txt  regipswd.cpp
src/utils/regirfb/: CMakeLists.txt  S91fbrec  framebuf.cpp  framebuf.hpp  index.html  ipc.cpp  ipc.hpp  macro.hpp  main.cpp  regirfb
src/utils/regirfb/thttpd/: S90thttpd  thttpd_config  thttpd_wrapper
src/utils/regisetup/: CMakeLists.txt  def.sh  hw.sh  rb_fuses_imx53.sh  rb_fuses_imx53v2_spi_flash.sh  rb_setup_linux.sh  regisetuprc
src/utils/regisetup/uboot_conf/: CMakeLists.txt  uboot_conf.cpp
src/utils/regisplash/: CMakeLists.txt  main.cpp
src/utils/regitest/: CMakeLists.txt  build.sh  memtester_loger.sh  rb_ttyusb_tester.sh  regitest_time.hpp  ttyusb_speed_test.sh
src/utils/regitest/beep_1771_test/: .gitignore  Makefile  Makefile.arm  README  regi_beep.c
src/utils/regitest/benchmark/: arm-make.sh  bzip_test.h  fb_test.h  gzip_test.h  macroses.h  main.cpp  mem_test.h  nand_test.h  timer.h
src/utils/regitest/dfb_cairo_test/: CMakeLists.txt  dfb_cairo_test.cpp
src/utils/regitest/dfb_chart_test/: CMakeLists.txt  dfb_cairo.cpp  dfb_cairo.hpp  dfb_chart_test.cpp
src/utils/regitest/dfb_test/: CMakeLists.txt  dfb_test.cpp
src/utils/regitest/modbus_test/: CMakeLists.txt  mbcomm_rot.h  modbus_scan.sh  modbus_test.cpp
src/utils/regitest/proc_test/: CMakeLists.txt  proc_test.cpp
src/utils/regitest/psu_test/: CMakeLists.txt  psu_test.cpp
src/utils/regitest/rtc_irq_test/: CMakeLists.txt
src/utils/regitest/socket_test/: CMakeLists.txt  simple_client.cpp  simple_server.cpp
src/utils/regitest/sys_stat_test/: CMakeLists.txt
src/utils/regitest/ttyusb_test/: CMakeLists.txt  ttyusb_test.cpp
src/utils/regitest/udev_test/: CMakeLists.txt
src/utils/regitest/usb_test/: CMakeLists.txt  usb_test.cpp
src/utils/regiweb/: CMakeLists.txt
(+166 files in other folders)
